tests/new_array_type_mismatch.stderr
tests/new_array_type_mismatch.sl:3:21: error: SL2004: type mismatch: cannot use expression of type *[i32 8] as *i32
